commit for the successful User Creation and Authentication

--- a/PropertyPulse_Django/.env
+++ b/PropertyPulse_Django/.env
@@ -1,4 +1,4 @@
-HBNB_MYSQL_USER="root"
-HBNB_MYSQL_PWD="10229101151"
-HBNB_MYSQL_HOST="localhost"
-HBNB_MYSQL_DB="property_pulse_dev"
+MYSQL_USER="root"
+MYSQL_PWD="10229101151"
+MYSQL_HOST="localhost"
+MYSQL_DB="property_pulse_dev"
