commit for updates

--- a/PropertyPulse_flask/.env
+++ b/PropertyPulse_flask/.env
@@ -1,4 +1,5 @@
-MYSQL_USER="root"
-MYSQL_PWD="10229101151"
-MYSQL_HOST="localhost"
-MYSQL_DB="flask_property_pulse"
+MYSQL_USER=root
+MYSQL_PWD=10229101151
+MYSQL_HOST=127.0.0.1
+MYSQL_PORT=3306
+MYSQL_DB=flask_property_pulse
