Update: Optimise usr Exerience

--- a/PropertyPulse_flask/.env
+++ b/PropertyPulse_flask/.env
@@ -1,5 +1,5 @@
-MYSQL_USER=root
+MYSQL_USER=mitsudata
 MYSQL_PWD=10229101151
-MYSQL_HOST=192.168.1.133
-MYSQL_PORT=3307
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
 MYSQL_DB=flask_property_pulse
