--- a/PropertyPulse_flask/alembic.ini
+++ b/PropertyPulse_flask/alembic.ini
@@ -55,7 +55,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql://root:10229101151@192.168.1.6/flask_property_pulse
+sqlalchemy.url = mysql://mitsudata:10229101151@127.0.0.1/flask_property_pulse
 
 
 [post_write_hooks]
